[FIX] website: hide cookies bar on policy page
With the popup-styled cookies bar, the cookies policy page is
unreadable. It is also the case with all cookies bar with a backdrop.
The "discrete" and "classic" bars can also potentially hide the last
paragraph(s) of the page.
To avoid that, this commit adds a button to toggle the bar on that page.

Note that the cookies policy page could be on any URL, but it has to be
referenced in the `a.o_cookies_bar_text_policy` link within the cookies
bar.

task-3733860

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -1657,6 +1657,11 @@ $ribbon-padding: 100px;
     }
 }
 
+.o_cookies_bar_toggle {
+    gap: 0.5rem;
+    pointer-events: auto;
+}
+
 .o_website_btn_loading {
     cursor: wait;
     opacity: $btn-disabled-opacity;
